WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251630
Some data task signposts are not ended properly
https://bugs.webkit.org/show_bug.cgi?id=251630
Summary
Some data task signposts are not ended properly
Ben Nham
Reported
2023-02-02 14:06:25 PST
Sometimes, when a data task is cancelled, the didCompleteWithError method is not called. Since that is where we end data task signposts, this can lead to dropped signposts and incorrectly attributed resource loads in perf traces. To fix this, most the end of the signpost to the destructor instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2023-02-02 14:06:39 PST
<
rdar://problem/104976161
>
Ben Nham
Comment 2
2023-02-02 14:08:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9552
EWS
Comment 3
2023-02-03 11:04:46 PST
Committed
259826@main
(6fb617ebe42b): <
https://commits.webkit.org/259826@main
> Reviewed commits have been landed. Closing PR #9552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug